# eri-dojo-JLPT-generator

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package.json  pyproject.toml  requirements.txt  rxconfig.py  vercel.json
.cursor/rules/: clean-architecture-solid.mdc  git-branch-before-implementation.mdc  jlpt-pattern-research-guideline.mdc  no-global-deps-use-local-venv.mdc  no-overengineering-nextgen.mdc  project-autonomy.mdc  python-match-multibranch.mdc  python-uv-local-dev.mdc  security-no-secrets-leaks.mdc  testing-run-pytest-after-changes.mdc  use-skill-verify-containerization-docker-compose.mdc  vercel-deploy-ready.mdc
JLPT_generator/: JLPT_generator.py
JLPT_generator/domain/: __init__.py  models.py
JLPT_generator/i18n/: __init__.py  strings.py
JLPT_generator/monitoring/: __init__.py  generation_log.py
JLPT_generator/parsers/: __init__.py  delimited_questions.py  markers.py
JLPT_generator/text/: __init__.py  feedback_preprocess.py
JLPT_generator/use_cases/: __init__.py  analyze_performance.py  batch_questions.py  generate_question.py  listening_question_generation.py  prompts.py  reading_question_generation.py  stream_questions_generation.py
JLPT_generator/webapp/: app.py  markdown.py  routes.py  token_codec.py
api/: asgi.py  wsgi.py
scripts/: vercel-build.sh
tests/: conftest.py
tests/integration/: test_ollama_json_parsing.py
tests/unit/: test_batch_questions.py  test_delimited_question_parser.py  test_feedback_pdf.py  test_generate_question_usecase.py  test_i18n.py  test_listening_question_generation.py  (+6 more)
(+18 files in other folders)
